force-app/main/default/objects/Program_Session__c/Program_Session__c.object-meta.xml
<CustomObject>
    <label>Program Session</label>
    <nameField>
        <label>Program Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>