force-app/main/default/objects/Program_Session__c/fields/Application_Required__c.field-meta.xml
<CustomField>
    <fullName>Application_Required__c</fullName>
    <formula>Program__r.Application_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Required</label>
    <type>Checkbox</type>
</CustomField>