force-app/main/default/objects/Program_Session__c/fields/Currently_In_Session__c.field-meta.xml
<CustomField>
    <fullName>Currently_In_Session__c</fullName>
    <formula>AND(TODAY() &gt; Start_Date__c, TODAY() &lt; End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currently In Session</label>
    <type>Checkbox</type>
</CustomField>