force-app/main/default/objects/Program_Session__c/fields/Dates__c.field-meta.xml
<CustomField>
    <fullName>Dates__c</fullName>
    <formula>TEXT(MONTH(Start_Date__c))+&quot;/&quot; +

TEXT(DAY(Start_Date__c))+&quot;/&quot; +

TEXT(YEAR(Start_Date__c))+&quot; - &quot;+


TEXT(MONTH(End_Date__c))+&quot;/&quot; +


TEXT(DAY(End_Date__c))+&quot;/&quot; +


TEXT(YEAR(End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dates</label>
    <type>Text</type>
</CustomField>