force-app/main/default/objects/Program_Session__c/fields/Maximum_Age__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Age__c</fullName>
    <formula>Program__r.Maximum_Age__c</formula>
    <label>Maximum Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>