force-app/main/default/objects/Program_Session__c/fields/Minimum_Age__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Age__c</fullName>
    <formula>Program__r.Minimum_Age__c</formula>
    <label>Minimum Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>