force-app/main/default/objects/Program_Session__c/fields/My_School_s_Program_Sessions__c.field-meta.xml
<CustomField>
    <fullName>My_School_s_Program_Sessions__c</fullName>
    <formula>CASESAFEID( Program__r.School__r.Id ) = $User.Account_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My School&apos;s Program Sessions</label>
    <type>Checkbox</type>
</CustomField>