force-app/main/default/objects/Program_Session__c/fields/Open_for_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Open_for_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open for Enrollment</label>
    <type>Checkbox</type>
</CustomField>