force-app/main/default/objects/Program_Session__c/fields/Override_Age_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Override_Age_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Age Requirements</label>
    <type>Checkbox</type>
</CustomField>