force-app/main/default/objects/Program_Session__c/fields/Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>Price_Formula__c</fullName>
    <formula>Program__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>