force-app/main/default/objects/Program_Session__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <formula>IF (ISBLANK(Start_Time__c), &quot;&quot;,

IF(HOUR(Start_Time__c) &lt;= 12, TEXT(HOUR(Start_Time__c)), TEXT(HOUR(Start_Time__c)-12)) &amp; &quot;:&quot; &amp;

IF (MINUTE(Start_Time__c) &lt; 10, &quot;0&quot; + TEXT(MINUTE(Start_Time__c)), TEXT(MINUTE(Start_Time__c))) &amp;

IF (HOUR(Start_Time__c) &lt; 12, &quot; AM&quot;, &quot; PM&quot;))

+ &quot; - &quot; +

IF (ISBLANK(End_Time__c), &quot;&quot;,

IF(HOUR(End_Time__c) &lt;= 12, TEXT(HOUR(End_Time__c)), TEXT(HOUR(End_Time__c)-12)) &amp; &quot;:&quot; &amp;

IF (MINUTE(End_Time__c) &lt; 10, &quot;0&quot; + TEXT(MINUTE(End_Time__c)), TEXT(MINUTE(End_Time__c))) &amp;

IF (HOUR(End_Time__c) &lt; 12, &quot; AM&quot;, &quot; PM&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time</label>
    <type>Text</type>
</CustomField>