force-app/main/default/objects/Program_Session__c/listViews/Currently_In_Session.listView-meta.xml
<ListView>
    <fullName>Currently_In_Session</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Currently_In_Session__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Currently In Session</label>
</ListView>