force-app/main/default/objects/Program_Session__c/listViews/My_School_s_Program_Sessions.listView-meta.xml
<ListView>
    <fullName>My_School_s_Program_Sessions</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_School_s_Program_Sessions__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My School&apos;s Program Sessions</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>