force-app/main/default/objects/Program_Session__c/listViews/Programs_Currently_Open_for_Enrollment.listView-meta.xml
<ListView>
    <fullName>Programs_Currently_Open_for_Enrollment</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Days_of_the_Week__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Open_for_Enrollment__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Programs Currently Open for Enrollment</label>
</ListView>